[gd_scene load_steps=9 format=3 uid="uid://bjqbf07axicby"]

[ext_resource type="Script" uid="uid://4g32paes5u2h" path="res://src/unit/transporter.gd" id="1_krfjx"]
[ext_resource type="Texture2D" uid="uid://d1w818h4fgm86" path="res://asset/texture/prop/transport/station_sign.webp" id="2_824n2"]
[ext_resource type="PackedScene" uid="uid://dekecjlka8xp5" path="res://src/ui/dialog/dialog.tscn" id="2_petxv"]
[ext_resource type="PackedScene" uid="uid://vpfo1b81nema" path="res://src/ui/dialog/dialog_content.tscn" id="3_euokl"]

[sub_resource type="Animation" id="Animation_3djgh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_824n2"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3djgh"]
_data = {
&"RESET": SubResource("Animation_3djgh"),
&"idle": SubResource("Animation_824n2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ssxf"]
size = Vector2(2, 8)

[node name="Transporter" type="StaticBody2D" groups=["interact_object", "transporter"]]
collision_layer = 64
collision_mask = 0
script = ExtResource("1_krfjx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3djgh")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -28)
texture = ExtResource("2_824n2")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_8ssxf")

[node name="Dialog" parent="." node_paths=PackedStringArray("root_dialog") instance=ExtResource("2_petxv")]
position = Vector2(0, -24)
root_dialog = NodePath("Transport")
hide_disabled = true

[node name="Transport" parent="Dialog" node_paths=PackedStringArray("target") instance=ExtResource("3_euokl")]
can_end = true
message = Array[String](["TRANSPORT_INFO"])
target = {
"SCENE_CAVE": NodePath("Cave"),
"SCENE_DESERT": NodePath("Desert"),
"SCENE_FOREST": NodePath("Forest"),
"SCENE_SHIP": NodePath("Ship"),
"SCENE_SNOWFIELD": NodePath("Snowfield")
}

[node name="Forest" parent="Dialog/Transport" instance=ExtResource("3_euokl")]
can_release_control = false

[node name="Desert" parent="Dialog/Transport" instance=ExtResource("3_euokl")]
can_release_control = false

[node name="Snowfield" parent="Dialog/Transport" instance=ExtResource("3_euokl")]
can_release_control = false

[node name="Ship" parent="Dialog/Transport" instance=ExtResource("3_euokl")]
can_release_control = false

[node name="Cave" parent="Dialog/Transport" instance=ExtResource("3_euokl")]
can_release_control = false

[connection signal="started" from="Dialog/Transport/Forest" to="." method="_on_forest_started"]
[connection signal="started" from="Dialog/Transport/Desert" to="." method="_on_desert_started"]
[connection signal="started" from="Dialog/Transport/Snowfield" to="." method="_on_snowfield_started"]
[connection signal="started" from="Dialog/Transport/Ship" to="." method="_on_ship_started"]
[connection signal="started" from="Dialog/Transport/Cave" to="." method="_on_cave_started"]
